--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="bg-dark">
-    <!-- page content goes here -->
+    <!-- page content -->
     <div class="main">
       <nav class="navbar navbar-expand-lg navbar-light bg-info p-4">
         <a class="navbar-brand logo" href="#">Click Fit</a>
@@ -80,6 +80,69 @@
           </form>
         </div>
       </nav>
+      <!-- Hero Section -->
+      <section
+        class="hero text-white d-flex align-items-center justify-content-center text-center"
+      >
+        <div>
+          <h1 class="display-4 font-weight-bold mb-3">Welcome to Click Fit</h1>
+          <p class="lead mb-4">
+            Your ultimate fitness partner. Workout smarter, eat better, live
+            stronger.
+          </p>
+          <a
+            href="#"
+            class="btn btn-warning btn-lg font-weight-semibold hero-btn"
+            >Get Started</a
+          >
+        </div>
+      </section>
+
+      <!-- Feature Section -->
+      <section class="py-5 bg-light text-center features">
+        <div class="container">
+          <h2 class="mb-4">What We Offer</h2>
+          <div class="row">
+            <div class="col-md-4 mb-4">
+              <div class="card shadow h-100 p-4">
+                <h4>Workout Routines</h4>
+                <p>
+                  Custom fitness plans for strength, endurance, and flexibility.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card shadow h-100 p-4">
+                <h4>Meal Planning</h4>
+                <p>
+                  Healthy and personalized meal plans to match your fitness
+                  goals.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card shadow h-100 p-4">
+                <h4>Track Progress</h4>
+                <p>
+                  Interactive dashboard to track your workouts, meals, and
+                  results.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="bg-dark text-white py-4 text-center">
+        <div class="container">
+          <p class="mb-2">&copy; 2025 Click Fit. All rights reserved.</p>
+          <div>
+            <a href="#" class="text-white mx-2">Privacy Policy</a> |
+            <a href="#" class="text-white mx-2">Terms of Service</a>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <!-- jQuery -->
@@ -93,6 +156,6 @@
     ></script>
 
     <!-- Your script -->
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
