feat: add upload section with drag & drop functionality and title styling

--- a/client/index.html
+++ b/client/index.html
@@ -99,9 +99,9 @@
       </section>
 
       <!-- Feature Section -->
-      <section class="py-5 bg-light text-center features">
+      <section class="py-5 text-center features">
         <div class="container">
-          <h2 class="mb-4">What We Offer</h2>
+          <h2 class="mb-4 feature-title">What We Offer</h2>
           <div class="row">
             <div class="col-md-4 mb-4">
               <div class="card shadow h-100 p-4">
@@ -130,6 +130,35 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- Upload Section -->
+      <section class="py-5 text-center">
+        <div class="container">
+          <h2 class="mb-4 title">Upload Your Fitness Images</h2>
+          <div
+            id="upload-box"
+            class="upload-box p-5 border border-secondary rounded"
+          >
+            <p>
+              Drag & Drop images here or
+              <label for="image-upload" class="btn btn-info btn-sm"
+                >Click to Upload</label
+              >
+            </p>
+            <input
+              type="file"
+              id="image-upload"
+              multiple
+              accept="image/*"
+              style="display: none"
+            />
+          </div>
+          <div
+            id="upload-feedback"
+            class="mt-3 text-success font-weight-bold"
+          ></div>
         </div>
       </section>
 
