--- a/client/index.html
+++ b/client/index.html
@@ -162,6 +162,28 @@
         </div>
       </section>
 
+      <!-- Fun Fact Section -->
+      <section class="py-5 text-center bg-white">
+        <div class="container">
+          <h2 class="mb-4">On The Year</h2>
+          <div
+            id="fact-container"
+            class="alert alert-info font-weight-bold"
+          ></div>
+          <div class="mt-3">
+            <h5>Fact Log:</h5>
+            <ul id="fact-log" class="list-group"></ul>
+          </div>
+        </div>
+        <button
+          id="get-fact-btn"
+          class="btn btn-info btn-sm mt-3"
+          id="load-fact"
+        >
+          Load Fun Fact
+        </button>
+      </section>
+
       <!-- Footer -->
       <footer class="bg-dark text-white py-4 text-center">
         <div class="container">
